<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".AppsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heading1"
        android:textSize="24sp"
        android:text="@string/apps" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:layout_marginTop="32dp"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/light"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:clickable="true"
            android:focusable="true"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="32dp"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/ic_calculate"
                    app:tint="@color/dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heading2"
                    android:text="@string/app1"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/light"
            app:cardCornerRadius="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="32dp"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/ic_user_checklist"
                    app:tint="@color/dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heading2"
                    android:text="@string/app2"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardApi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/light"
            app:cardCornerRadius="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="32dp"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/ic_ghost"
                    app:tint="@color/dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heading2"
                    android:text="@string/app3"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="fill"
            app:cardBackgroundColor="@color/light"
            app:cardCornerRadius="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="32dp"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/ic_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heading2"
                    android:text="@string/other"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>